--- a/src/app/main/elements/ng-material2/cascade-dropdownlist/cascade-dropdownlist.component.html
+++ b/src/app/main/elements/ng-material2/cascade-dropdownlist/cascade-dropdownlist.component.html
@@ -4,15 +4,15 @@
         fxLayoutGap.gt-sm="30px">
             <div class="bg-white p-24" fxFlex="32" fxFlex.lt-md="100">
                 <h3>SIMPLE</h3>
-                <nm-cascade-dropdownlist [options]="options"></nm-cascade-dropdownlist>
+                <nm-cascade-dropdownlist [options]="options" [touchUi]="isHandset | async"></nm-cascade-dropdownlist>
             </div>
             <div class="bg-white p-24" fxFlex="32" fxFlex.lt-md="100">
                 <h3>Define Placeholder</h3>
-                <nm-cascade-dropdownlist [options]="options" placeholder="请选择项目"></nm-cascade-dropdownlist>
+                <nm-cascade-dropdownlist [options]="options" [touchUi]="isHandset | async" placeholder="请选择项目"></nm-cascade-dropdownlist>
             </div>
             <div class="bg-white p-24" fxFlex="32" fxFlex.lt-md="100">
                 <h3>Disabled</h3>
-                <nm-cascade-dropdownlist [options]="options" [disabled]="true"></nm-cascade-dropdownlist>
+                <nm-cascade-dropdownlist [options]="options" [disabled]="true" [touchUi]="isHandset | async"></nm-cascade-dropdownlist>
             </div>
         </div>
 
@@ -20,22 +20,29 @@
             fxLayoutGap.gt-sm="30px">
             <div class="bg-white p-24" fxFlex="32" fxFlex.lt-md="100">
                 <h3>Clearable</h3>
-                <nm-cascade-dropdownlist [options]="options" 
-                    [model]="['guide', 'design-principles', 'consistent']" 
-                    [clearable]="true">
+                <nm-cascade-dropdownlist
+                    [options]="options"
+                    [model]="['guide', 'design-principles', 'consistent']"
+                    [clearable]="true"
+                    [touchUi]="isHandset | async">
                 </nm-cascade-dropdownlist>
             </div>
             <div class="bg-white p-24" fxFlex="32" fxFlex.lt-md="100">
                 <h3>not fullLevels</h3>
-                <nm-cascade-dropdownlist [options]="options" 
+                <nm-cascade-dropdownlist
+                    [options]="options"
                     [model]="['guide', 'design-principles', 'consistent']"
-                    [fullLevels]="false">
+                    [fullLevels]="false"
+                    [touchUi]="isHandset | async">
                 </nm-cascade-dropdownlist>
             </div>
             <div class="bg-white p-24" fxFlex="32" fxFlex.lt-md="100">
                 <h3>changeOnSelect</h3>
-                <nm-cascade-dropdownlist [options]="options" 
-                    [changeOnSelect]="true" (modelChange)="changeHandle($event)">
+                <nm-cascade-dropdownlist
+                    [options]="options"
+                    [changeOnSelect]="true"
+                    [touchUi]="isHandset | async"
+                    (modelChange)="changeHandle($event)">
                 </nm-cascade-dropdownlist>
             </div>
         </div>
@@ -44,7 +51,7 @@
             fxLayoutGap.gt-sm="30px">
             <div class="bg-white p-24" fxFlex="32" fxFlex.lt-md="100">
                 <h3>Touch UI</h3>
-                <nm-cascade-dropdownlist [options]="options" 
+                <nm-cascade-dropdownlist [options]="options"
                     [touchUi]="true">
                 </nm-cascade-dropdownlist>
             </div>
