feat(layout): update dynamic footer year

--- a/src/app/layout/components/footer/footer.component.html
+++ b/src/app/layout/components/footer/footer.component.html
@@ -8,7 +8,7 @@
         </a>
 
         <div fxLayout="row" fxLayoutAlign="start center" fxHide fxShow.gt-xs>
-            <span>Copyright 2018. All Rights Reserved by Notadd</span>
+            <span>Copyright {{copyrightYear}}. All Rights Reserved By Notadd</span>
         </div>
 
     </div>
