feat(*): add 'scondary-text' class for keyboard_arrow_down icon

--- a/src/@notadd/components/toolbar-nav/toolbar-nav/toolbar-nav.component.html
+++ b/src/@notadd/components/toolbar-nav/toolbar-nav/toolbar-nav.component.html
@@ -1,7 +1,7 @@
 <button class="cursor-pointer" mat-button cdk-overlay-origin (click)="showPanel()">
     <div fxLayout="row" fxLayoutAlign="center center">
         <span class="secondary-text">菜单</span>
-        <mat-icon class="s-20">keyboard_arrow_down</mat-icon>
+        <mat-icon class="secondary-text s-20">keyboard_arrow_down</mat-icon>
     </div>
 </button>
 <ng-template cdk-portal #navPanelTemplate="cdkPortal">
