--- a/src/app/layout/components/toolbar/toolbar.component.html
+++ b/src/app/layout/components/toolbar/toolbar.component.html
@@ -99,7 +99,7 @@
         <div fxLayout="row" fxLayoutAlign="center center">
             <img class="avatar" src="assets/images/avatars/tianhun.jpg">
             <span class="secondary-text">天魂</span>
-            <mat-icon class="s-20">keyboard_arrow_down</mat-icon>
+            <mat-icon class="secondary-text s-20">keyboard_arrow_down</mat-icon>
         </div>
     </button>
 
@@ -135,7 +135,7 @@
         <div fxLayout="row" fxLayoutAlign="center center">
             <mat-icon class="s-20 mr-4 secondary-text">language</mat-icon>
             <span class="secondary-text">{{currentLanguage.title}}</span>
-            <mat-icon class="s-20">keyboard_arrow_down</mat-icon>
+            <mat-icon class="secondary-text s-20">keyboard_arrow_down</mat-icon>
         </div>
     </button>
 
