--- a/src/@notadd/errors/errors-component/errors.component.scss
+++ b/src/@notadd/errors/errors-component/errors.component.scss
@@ -65,5 +65,17 @@
             font-weight: bold;
             color: #a9afb5;
         }
+
+        .error-pre {
+            text-align: left;
+            padding: 15px;
+            margin: 20px auto;
+            background-color: #ededed;
+            box-shadow: 0 3px 1px -2px rgba(0,0,0,.2), 0 2px 2px 0 rgba(0,0,0,.14), 0 1px 5px 0 rgba(0,0,0,.12);
+
+            pre {
+                white-space: pre-line;
+            }
+        }
     }
 }
