--- a/src/app/main/general/pages/forgot-password/forgot-password.component.scss
+++ b/src/app/main/general/pages/forgot-password/forgot-password.component.scss
@@ -1,5 +1,3 @@
-@import "../errors/errors.component.scss";
-
 .layout-full {
     position: absolute;
     top: 0;
@@ -7,6 +5,38 @@
     z-index: 0;
     width: 100%;
     height: 100%;
+}
+
+.vertical-align {
+    &::before {
+        display: inline-block;
+        height: 100%;
+        vertical-align: middle;
+        content: "";
+    }
+
+    .vertical-align-middle {
+        display: inline-block;
+        vertical-align: middle;
+    }
+}
+
+.copyright {
+    margin-top: 60px;
+    font-size: 12px;
+    font-weight: 500;
+    color: #424242;
+    letter-spacing: 1px;
+
+    p {
+        margin: 0 0 14px;
+    }
+}
+
+.social {
+    mat-icon {
+        color: #949494;
+    }
 }
 
 .pages-forgot-password {
